--- a/view/index.html
+++ b/view/index.html
@@ -1967,6 +1967,7 @@
     return new Promise(function (resolve, reject) {
       let request = new XMLHttpRequest();
       request.open(method, url);
+      request.setRequestHeader('Disco-User-Info', 'VisualStudioCode');
       request.onload = function () {
         if (this.status >= 200 && this.status < 300) {
           resolve(request.response);
